# TinyRenderer

./: .clang-format  CMakeLists.txt
ext/: geometry.h  model.cpp  model.h  tgaimage.cpp  tgaimage.h
lesson-0/: CMakeLists.txt  main.cpp
lesson-1/: CMakeLists.txt  main.cpp  wireframe.cpp
lesson-2/: CMakeLists.txt  line_sweep.cpp  main.cpp
lesson-3/: CMakeLists.txt  main.cpp
lesson-4-5/: CMakeLists.txt  main.cpp
lesson-6/: CMakeLists.txt  main.cpp  our_gl.cpp  our_gl.h  shaders.h
lesson-6b/: CMakeLists.txt  our_gl.cpp  our_gl.h
lesson-7/: CMakeLists.txt  main.cpp  our_gl.cpp  our_gl.h
